# visual_odometry

./: .gitignore  Cargo.toml  License.md  README.md  run_dtrace.sh
examples/: benchmark.rs  convolution.rs  external_drive.rs  image_frame.rs  image_gradient.rs  image_pyramid.rs  load_cv_image.rs  load_depth_image.rs  load_open_cv.rs  load_save_image.rs  solve_one_pair.rs
profiling/: out.stacks  profiling_commands.txt
src/: frame.rs  gauss_newton_routines.rs  image_pyramid.rs  jacobian.rs  jacobians.rs  lib.rs  main.rs
src/camera/: intrinsics.rs  mod.rs  types.rs
src/image/: filters.rs  mod.rs  types.rs
src/image/filters/: mod.rs  types.rs
src/image_proc/: filters.rs  frame.rs  image.rs  mod.rs  types.rs
src/image_proc/camera/: intrinsics.rs  mod.rs
src/image_proc/filters/: mod.rs  types.rs
src/io/: mod.rs
src/numerics/: lie.rs  matrix_ops.rs  mod.rs  weighting.rs
tests/: image_frames.rs  image_pyramid.rs  io.rs  jacobians.rs  numerics.rs  vision.rs
