[package]
name = "visual_odometry"
version = "0.1.0"
authors = ["Marc Haubenstock <marchaubenstock@Marcs-MacBook-Pro.local>"]
edition = "2018"

[dependencies]
image = "0.21.1"
nalgebra = "0.18.0"
nalgebra-lapack = {version ="0.10.0", default-features=false, features=["accelerate"]}
approx = "0.3.2"
png = "0.14.1"
byteorder = "1.3.1" # Reading numbers in [big/little]-endian.

[profile.release]
debug = true
